--- a/src/main/resources/webroot/chat.html
+++ b/src/main/resources/webroot/chat.html
@@ -41,10 +41,15 @@
 						<div id="face-box" class="face-box"></div>
 						<span class="face" onclick="CHAT.openFace();" title="选择表情"></span>
 						<span class="flower" onclick="CHAT.sendFlower();" title="送鲜花"></span>
+						<!-- <form id="uploadForm" ENCTYPE="multipart/form-data"> -->
+						<input type="file" name="file" accept="*/*" id="upload" style="display:none" >
+						<span class="pic" id="pic" title="选择图片"></span>
+						<!-- </form> -->
+						<!-- <span class="pic" onclick="CHAT.sendPic();" title="选择图片"></span> -->
 					</div>
 					<div class="input-box">
 						<div class="input" contenteditable="true" id="send-message"></div>
-						<div class="action">
+						<div class="action">  
 							<input class="button" type="button" value="发送" id="send" onclick="CHAT.sendText();"/> 
 						</div>
 					</div>
