--- a/src/main/resources/webroot/chat.html
+++ b/src/main/resources/webroot/chat.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" name="viewport">
-<title>聊天室</title>
+<title>聊天室2</title>
 <link rel="stylesheet" href="/css/style.css"></link>
 <script type="text/javascript" src="/js/lib/jquery.min.js"></script>
 <script type="text/javascript" src="/js/lib/jquery.snowfall.js"></script>
